# dto_mapper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ast_expand.txt  rustfmt.toml
dto_mapper/: Cargo.toml
dto_mapper/src/: dto_builder.rs  entry_validator.rs  lib.rs  mapper_entry.rs  parser.rs  struct_entry.rs  utils.rs
examples/: dto_example.rs
src/: dto_builder.rs  entry_validator.rs  lib.rs  main.rs  main.rs.bak  mapper_entry.rs  my_dto.rs  struct_entry.rs  utils.rs
tests/: test_dto_creation.rs
